parent 5.x + picocli + reduced dependencies