@@ -2,243 +2,213 @@ package com.github.thenestruo.bin2png;
 
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
+import java.util.Arrays;
+import java.util.concurrent.Callable;
 import java.util.zip.CRC32;
 
 import javax.imageio.ImageIO;
 
-import org.apache.commons.cli.CommandLine;
-import org.apache.commons.cli.DefaultParser;
-import org.apache.commons.cli.MissingOptionException;
-import org.apache.commons.cli.Options;
-import org.apache.commons.cli.ParseException;
-import org.apache.commons.cli.help.HelpFormatter;
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.ArrayUtils;
-import org.apache.commons.lang3.Validate;
-import org.apache.commons.lang3.tuple.Pair;
 import org.tinylog.Logger;
 
-import com.github.thenestruo.util.FileSystemResource;
-import com.github.thenestruo.util.ReadableResource;
+import com.github.thenestruo.bin2png.impl.AbstractVisualizer;
+import com.github.thenestruo.bin2png.impl.CharsetHorizontalVisualizer;
+import com.github.thenestruo.bin2png.impl.ColoredGroupedVerticalVisualizer;
+import com.github.thenestruo.bin2png.impl.GroupedVerticalVisualizer;
+import com.github.thenestruo.bin2png.impl.HighlightVerticalVisualizer;
+import com.github.thenestruo.bin2png.impl.HorizontalVisualizer;
+import com.github.thenestruo.bin2png.impl.MsxColorVisualizer;
+import com.github.thenestruo.bin2png.impl.MsxMonochromeVisualizer;
+import com.github.thenestruo.bin2png.impl.MsxSpritesVisualizer;
+import com.github.thenestruo.bin2png.impl.SpritesVerticalVisualizer;
+import com.github.thenestruo.bin2png.impl.VerticalVisualizer;
+import com.github.thenestruo.bin2png.impl.ZxColorVisualizer;
+import com.github.thenestruo.bin2png.impl.ZxMonochromeVisualizer;
+import com.github.thenestruo.commons.Bools;
+import com.github.thenestruo.commons.io.Paths;
 
-public class Bin2PngApp {
+import picocli.CommandLine;
+import picocli.CommandLine.Command;
+import picocli.CommandLine.Option;
+import picocli.CommandLine.Parameters;
 
-	private static final String HELP = "help";
+@Command(name = "bin2png", sortOptions = false)
+public class Bin2PngApp implements Callable<Integer> {
 
-	private static final String START = "start";
-	private static final String WIDTH = "width";
-	private static final String HEIGHT = "height";
-	private static final String IMAGES = "images";
-	private static final String SPACING = "spacing";
+	public static void main(final String... args) {
+		new CommandLine(new Bin2PngApp()).execute(args);
+	}
 
-	private static final String HORIZONTAL = "horizontal";
-	private static final String HIGHLIGHT = "highlight";
-	private static final String SPRITES = "sprites";
-	private static final String CHARSET = "charset";
-	private static final String ZX = "zx";
-	private static final String ZXCOLOR = "zxcolor";
-	private static final String VGROUP = "vgroup";
-	private static final String VGROUPCOLOR = "vgroupcolor";
-	private static final String MSX = "msx";
-	private static final String MSXCOLOR = "msxcolor";
-	private static final String MSXSPRITES = "msxsprites";
+	@Option(names = { "-h", "--help" }, usageHelp = true, description = "shows usage")
+	private boolean help;
 
-	private static final String BIOSFONT = "biosfont";
+	@Parameters(index = "0", arity = "1", paramLabel = "input", description = "binary input file")
+	private Path inputPath;
 
-	public static void main(final String[] args) throws ParseException, IOException {
+	@Parameters(index = "1",
+			arity = "0..1",
+			paramLabel = "output",
+			description = "PNG output file (optional, defaults to <input>.png)")
+	private Path outputPath;
 
-		// Parses the command line
-		final Options options = options();
-		final CommandLine command;
-		try {
-			command = new DefaultParser().parse(options, args);
-		} catch (final MissingOptionException e) {
-			showUsage(options);
-			return;
-		}
+	@Option(names = { "-start" }, description = "Start offset, in bytes (default: 0)", defaultValue = "0")
+	private Integer start;
 
-		// Main options
-		if (showUsage(command, options)) {
-			return;
-		}
-		// setVerbose(command);
+	@Option(names = { "-width" }, description = "Width, in pixels (for ZX-ordered graphics visualizer)")
+	private Integer width;
+
+	@Option(names = { "-height" }, description = "Height, in pixels (for ZX-ordered graphics visualizer)")
+	private Integer height;
+
+	@Option(names = { "-images" }, description = "Number of consecutive images (default: 1)", defaultValue = "1")
+	private Integer imageCount;
+
+	@Option(names = { "-spacing" }, description = "Spacing, in pixels (default: 2)", defaultValue = "2")
+	private Integer spacing;
+
+	@Option(names = { "-h", "--horizontal" }, description = "Uses the horizontal visualizer")
+	private boolean isHorizontal;
+
+	@Option(names = { "-l", "--highlight" }, description = "Uses the padding/ASCII/CALLs/JPs highlight visualizer")
+	private boolean isHighlight;
+
+	@Option(names = { "-s", "--sprites" }, description = "Uses the 16x16 sprites visualizer")
+	private boolean isSprites;
+
+	@Option(names = { "-c", "--charset" }, description = "Uses the charset graphics visualizer")
+	private boolean isCharset;
+
+	@Option(names = { "-zx" }, description = "Uses the monochrome ZX-ordered graphics visualizer")
+	private boolean isZxMonochrome;
+
+	@Option(names = { "-zxcolor" }, description = "Uses the ZX-ordered graphics visualizer, followed by CLRTBL data")
+	private boolean isZxColor;
+
+	@Option(names = { "-vgroup" }, description = "Uses the grouped vertical visualizer")
+	private boolean isVGroupMonochrome;
+
+	@Option(names = { "-vgroupcolor" }, description = "Uses the grouped vertical visualizer, followed by CLRTBL data")
+	private boolean isVGroupColor;
+
+	@Option(names = { "-msx" }, description = "Uses the monochrome MSX-ordered graphics visualizer")
+	private boolean isMsxMonochrome;
+
+	@Option(names = { "-msxcolor" }, description = "Uses the MSX-ordered graphics visualizer, followed by CLRTBL data")
+	private boolean isMsxColor;
+
+	@Option(names = { "-msxsprites" }, description = "Uses the MSX-ordered 16x16 sprites visualizer")
+	private boolean isMsxSprites;
+
+	@Option(names = { "-f", "-biosfont" }, description = "Checks the file is an MSX BIOS image and extracts the font")
+	private boolean isBiosFont;
+
+	@Override
+	public Integer call() throws Exception {
 
 		// Reads the binary file
-		final Pair<String, ReadableResource> pair = readBinary(command);
-		final String inputFilePath = pair.getLeft();
-		final ReadableResource inputFile = pair.getRight();
-		if (inputFile == null) {
-			return;
+		final byte[] bytes = this.readBinary(this.inputPath);
+		if (bytes == null) {
+			return 10;
 		}
-		Logger.debug("Binary file read: {} bytes", inputFile.sizeOf());
+		Logger.debug("Binary file read: {} bytes", bytes.length);
 
 		// Reads the parameters
-		final Integer width = command.hasOption(WIDTH)
-				? Integer.parseUnsignedInt(command.getOptionValue(WIDTH))
-				: null;
-		final Integer height = command.hasOption(HEIGHT)
-				? Integer.parseUnsignedInt(command.getOptionValue(HEIGHT))
-				: null;
-		final int imageCount = Integer.parseUnsignedInt(command.getOptionValue(IMAGES, Integer.toString(1)));
-		final int spacing = Integer.parseUnsignedInt(command.getOptionValue(SPACING, Integer.toString(2)));
-
-		final AbstractVisualizer visualizer =
-				command.hasOption(HIGHLIGHT) ? new HighlightVerticalVisualizer(height, spacing)
-				: command.hasOption(SPRITES) ? new SpritesVerticalVisualizer(height, spacing)
-				: command.hasOption(CHARSET) ? new CharsetHorizontalVisualizer(width, spacing)
-				: command.hasOption(HORIZONTAL) ? new HorizontalVisualizer(width, spacing)
-				: command.hasOption(BIOSFONT) ? new HorizontalVisualizer(0)
-				: command.hasOption(ZX) ? new ZxMonochromeVisualizer(width, height, imageCount, spacing)
-				: command.hasOption(ZXCOLOR) ? new ZxColorVisualizer(width, height, imageCount, spacing)
-				: command.hasOption(VGROUP) ? new GroupedVerticalVisualizer(width, height, imageCount, spacing)
-				: command.hasOption(VGROUPCOLOR) ? new ColoredGroupedVerticalVisualizer(width, height, imageCount, spacing)
-				: command.hasOption(MSX) ? new MsxMonochromeVisualizer(imageCount, spacing)
-				: command.hasOption(MSXCOLOR) ? new MsxColorVisualizer(imageCount, spacing)
-				: command.hasOption(MSXSPRITES) ? new MsxSpritesVisualizer(imageCount, spacing)
-				: new VerticalVisualizer(height, spacing);
+		final AbstractVisualizer visualizer = this.isHighlight
+				? new HighlightVerticalVisualizer(this.height, this.spacing)
+				: this.isSprites ? new SpritesVerticalVisualizer(this.height, this.spacing)
+				: this.isCharset ? new CharsetHorizontalVisualizer(this.width, this.spacing)
+				: this.isHorizontal ? new HorizontalVisualizer(this.width, this.spacing)
+				: this.isBiosFont ? new HorizontalVisualizer(0)
+				//
+				: this.isZxMonochrome
+						? new ZxMonochromeVisualizer(this.width, this.height, this.imageCount, this.spacing)
+				: this.isZxColor
+						? new ZxColorVisualizer(this.width, this.height, this.imageCount, this.spacing)
+				//
+				: this.isVGroupMonochrome
+						? new GroupedVerticalVisualizer(this.width, this.height, this.imageCount, this.spacing)
+				: this.isVGroupColor
+						? new ColoredGroupedVerticalVisualizer(this.width, this.height, this.imageCount, this.spacing)
+				//
+				: this.isMsxMonochrome ? new MsxMonochromeVisualizer(this.imageCount, this.spacing)
+				: this.isMsxColor ? new MsxColorVisualizer(this.imageCount, this.spacing)
+				: this.isMsxSprites ? new MsxSpritesVisualizer(this.imageCount, this.spacing)
+				: new VerticalVisualizer(this.height, this.spacing);
 
 		// Generates the image
 		final BufferedImage image;
-		final String pngFilePath;
-		if (command.hasOption(BIOSFONT)) {
+		final Path outputPath;
+		if (this.isBiosFont) {
 
 			// Reads the data buffer
-			final byte[] buffer;
-			try (final InputStream is = IOUtils.buffer(inputFile.getInputStream())) {
-				buffer = is.readAllBytes();
-			}
+			final byte[] buffer = Files.readAllBytes(this.inputPath);
 
 			// Validates it looks like an MSX BIOS
-			Validate.isTrue(buffer.length == 0x8000);
-			final int cgtablAddress = Byte.toUnsignedInt(buffer[0x0004]) + (Byte.toUnsignedInt(buffer[0x0005]) * 0x0100);
-			Validate.isTrue(cgtablAddress <= (0x8000 - 0x0800));
+			Bools.requireTrue(buffer.length == 0x8000);
+			final int cgtablAddress = Byte.toUnsignedInt(buffer[0x0004])
+					+ (Byte.toUnsignedInt(buffer[0x0005]) * 0x0100);
+			Bools.requireTrue(cgtablAddress <= (0x8000 - 0x0800));
 			for (int i = 0; i < 8; i++) {
-				Validate.isTrue(buffer[cgtablAddress + i] == (byte) 0x00);
-				Validate.isTrue(buffer[cgtablAddress + (0x20 * 8) + i] == (byte) 0x00);
+				Bools.requireTrue(buffer[cgtablAddress + i] == (byte) 0x00);
+				Bools.requireTrue(buffer[cgtablAddress + (0x20 * 8) + i] == (byte) 0x00);
 			}
 
-			final byte[] cgtabl = ArrayUtils.subarray(buffer, cgtablAddress, cgtablAddress + 0x0800);
+			final byte[] cgtabl = Arrays.copyOfRange(buffer, cgtablAddress, cgtablAddress + 0x0800);
 			final CRC32 crc32 = new CRC32();
 			crc32.reset();
 			crc32.update(cgtabl);
 
 			image = visualizer.renderImage(cgtabl);
 			final Long biosFontCrc32 = crc32.getValue();
-			pngFilePath = nextPath(command, String.format("%08X.%s.png", biosFontCrc32, inputFilePath));
+			outputPath = this.outputPath(String.format(".%08X.png", biosFontCrc32));
 
-		} else if (command.hasOption(START)) {
-
-			// Reads the data buffer
-			final byte[] buffer;
-			try (final InputStream is = IOUtils.buffer(inputFile.getInputStream())) {
-				buffer = is.readAllBytes();
-			}
+		} else if (this.start > 0) {
 
 			// Validates start offset and length
-			final int startOffset = Integer.decode(command.getOptionValue(START, Integer.toString(0)));
-			Validate.isTrue(buffer.length > startOffset);
+			Bools.requireTrue(bytes.length > this.start);
 
-			final byte[] subarray = ArrayUtils.subarray(buffer, startOffset, buffer.length);
+			final byte[] subarray = Arrays.copyOfRange(bytes, this.start, bytes.length);
 
 			image = visualizer.renderImage(subarray);
-			pngFilePath = nextPath(command, String.format("%s.%04X.png", inputFilePath, startOffset));
+			outputPath = this.outputPath(String.format(".%04X.png", this.start));
 
 		} else {
-			image = visualizer.renderImage(inputFile);
-			pngFilePath = nextPath(command, String.format("%s.png", inputFilePath));
-	}
+			image = visualizer.renderImage(Files.readAllBytes(this.inputPath));
+			outputPath = this.outputPath(".png");
+		}
 
 		// Writes the PNG file
-		Logger.debug("{}x{} image will be written to PNG file {}", image.getWidth(), image.getHeight(), pngFilePath);
-		writePngFile(pngFilePath, image);
-		Logger.debug("PNG file {} written", pngFilePath);
+		Logger.debug("{}x{} image will be written to PNG file {}", image.getWidth(), image.getHeight(), outputPath);
+		this.writePngFile(outputPath, image);
+		Logger.debug("PNG file {} written", outputPath);
+
+		return 0;
 	}
 
-	private static Options options() {
+	private byte[] readBinary(final Path path) throws IOException {
 
-		final Options options = new Options();
-		options.addOption(HELP, "Shows usage");
-		// options.addOption(SIZE, true, "Size, in pixels (default: 256)");
-		options.addOption(START, true, "Start offset, in bytes (default: 0)");
-		options.addOption(WIDTH, true, "Width, in pixels (for ZX-ordered graphics visualizer)");
-		options.addOption(HEIGHT, true, "Height, in pixels (for ZX-ordered graphics visualizer)");
-		options.addOption(IMAGES, true, "Number of consecutive images (default: 1)");
-		options.addOption(SPACING, true, "Spacing, in pixels (default: 2)");
-		options.addOption("h", HORIZONTAL, false, "Uses the horizontal visualizer");
-		options.addOption("l", HIGHLIGHT, false, "Uses the padding/ASCII/CALLs/JPs highlight visualizer");
-		options.addOption("s", SPRITES, false, "Uses the 16x16 sprites visualizer");
-		options.addOption("c", CHARSET, false, "Uses the charset graphics visualizer");
-		options.addOption(ZX, false, "Uses the monochrome ZX-ordered graphics visualizer");
-		options.addOption(ZXCOLOR, false, "Uses the ZX-ordered graphics visualizer, followed by CLRTBL data");
-		options.addOption(VGROUP, false, "Uses the grouped vertical visualizer");
-		options.addOption(VGROUPCOLOR, false, "Uses the grouped vertical visualizer, followed by CLRTBL data");
-		options.addOption(MSX, false, "Uses the monochrome MSX-ordered graphics visualizer");
-		options.addOption(MSXCOLOR, false, "Uses the MSX-ordered graphics visualizer, followed by CLRTBL data");
-		options.addOption(MSXSPRITES, false, "Uses the MSX-ordered 16x16 sprites visualizer");
-		options.addOption("f", BIOSFONT, false, "Checks the file is an MSX BIOS image and extracts the font");
-		return options;
-	}
-
-	private static boolean showUsage(final CommandLine command, final Options options) throws IOException  {
-
-		return command.hasOption(HELP)
-				? showUsage(options)
-				: false;
-	}
-
-	private static boolean showUsage(final Options options) throws IOException {
-
-		// (prints in proper order)
-		HelpFormatter.builder()
-				.setShowSince(false)
-				.get().printHelp(
-					"java -jar bin2png.jar <input> <output>",
-					"with:"
-					+ "\n<input>   Binary input file"
-					+ "\n<output>  PNG output file (optional, defaults to <input>.png)",
-					options.getOptions(),
-					null,
-					true);
-		// helpFormatter.printWrapped(pw, 114, "  <input>    Binary input file");
-		// helpFormatter.printWrapped(pw, 114, "  <output>   PNG output file (optional, defaults to <input>.png)");
-
-		return true;
-	}
-
-	private static Pair<String, ReadableResource> readBinary(final CommandLine command) throws IOException {
-
-		final String path = nextPath(command, null);
+		// (sanity check)
 		if (path == null) {
-			return Pair.of(null, null);
-		}
-		final Path file = Path.of(path);
-		if (!Files.exists(file)) {
-			Logger.warn("Binary input file {} does not exist", file.toAbsolutePath());
-			return Pair.of(path, null);
+			return null;
 		}
 
-		Logger.debug("Binary input file {} will be read", file.toAbsolutePath());
-		return Pair.of(path, new FileSystemResource(file));
+		if (!Files.exists(path)) {
+			Logger.warn("Binary input file {} does not exist", path);
+			return null;
+		}
+
+		Logger.debug("Binary input file {} will be read", path);
+		return Files.readAllBytes(path);
 	}
 
-	private static void writePngFile(final String path, final BufferedImage image) throws IOException {
+	private void writePngFile(final Path path, final BufferedImage image) throws IOException {
 
-		final Path file = Path.of(path);
-		// if (file.exists()) {
-		// 	logger.warn("PNG output file {} already exists", file.getAbsolutePath());
-		// 	return;
-		// }
-
-		ImageIO.write(image, "PNG", file.toFile());
+		ImageIO.write(image, "PNG", path.toFile());
 	}
 
-	private static String nextPath(final CommandLine command, final String defaultValue) {
+	private Path outputPath(final String suffix) {
 
-		final List<String> argList = command.getArgList();
-		return argList.isEmpty() ? defaultValue : argList.remove(0);
+		return this.outputPath != null ? this.outputPath : Paths.append(this.inputPath, suffix);
 	}
 }
